# simple-rustlings

./: .gitignore  Cargo.toml  README.md  info.toml
exercises/intro/: intro.rs
exercises/test/: test.rs
src/: exercise.rs  main.rs
