[package]
name = "kiga"
description = "Small exercises to get you used to reading and writing Rust code!"
version = "5.6.1"
authors = [
  "Localhost",
]
edition = "2021"

[dependencies]
indicatif = "0.17.6"
console = "0.15"
notify = "4.0"
toml = "0.7.6"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.81"
home = "0.5.3"
glob = "0.3.0"
clap = { version = "4.4.0", features = ["derive"] }
thread_local = "1.1.3"
lazy_static = "1.4.0"
tokio = { version = "1.12.0", features = ["full"] }

[[bin]]
name = "kiga"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
glob = "0.3.0"
